# qt-material-widgets

./: .gitignore  CMakeLists.txt  README.md
components/: CMakeLists.txt  components.pro  qtmaterialavatar.cpp  qtmaterialavatar.h  qtmateriallistitem.cpp  qtmateriallistitem.h  qtmateriallistitem_p.h  resources.qrc
components/lib/: qtmaterialtheme.h
demons/: CMakeLists.txt  demons.rc  main.cpp  mainsheet.cpp
example/: CMakeLists.txt  main.cpp  mainsheet.cpp  mainsheet.h
examples/: CMakeLists.txt  appbarsettingseditor.cpp  autocompletesettingseditor.h  avatarsettingseditor.cpp  examples.pro  iconbuttonsettingseditor.cpp  listitemsettingseditor.cpp  listitemsettingseditor.h  listitemsettingsform.ui  mainwindow.cpp  menusettingseditor.h  progresssettingseditor.cpp
qtmaterial/: CMakeLists.txt
qtmaterial/components/: qtmaterialappbar.cpp  qtmaterialavatar.cpp  qtmaterialavatar.h  qtmaterialavatar_p.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialcheckbox.cpp  qtmaterialcheckbox.h  qtmaterialcheckbox_p.h  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress.h  qtmaterialcircularprogress_p.h  qtmaterialdialog.cpp  qtmaterialdialog.h  qtmaterialdrawer.h  qtmaterialdrawer_internal.h  qtmaterialfab.cpp  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_p.h  qtmaterialiconbutton.cpp  qtmateriallistitem.cpp  qtmaterialprogress.cpp  qtmaterialprogress.h  qtmaterialprogress_p.h  qtmaterialradiobutton.cpp  qtmaterialradiobutton.h  qtmaterialradiobutton_p.h  qtmaterialscrollbar.cpp  qtmaterialslider.cpp  qtmaterialslider_internal.cpp  qtmaterialslider_internal.h  qtmaterialsnackbar.cpp  qtmaterialsnackbar.h  qtmaterialsnackbar_internal.cpp  qtmaterialtabs.cpp  qtmaterialtabs.h  qtmaterialtabs_internal.h  qtmaterialtabs_p.h  (+4 more)
qtmaterial/shared/: qtmaterialcheckable.cpp  qtmaterialcheckable_internal.cpp  qtmaterialcheckable_p.h  qtmaterialoverlaywidget.cpp  qtmaterialripple.cpp  qtmaterialrippleoverlay.cpp  qtmaterialrippleoverlay.h  qtmaterialstatetransition.cpp  qtmaterialstatetransition.h  qtmaterialstyle.cpp  qtmaterialstyle.h  qtmaterialtheme.cpp
